<resources>
    <string name="app_name">中脉商学院</string>
    <string name="next_time">下次再说</string>
    <string name="tips">温馨提示</string>
    <string name="app_upgrade">立刻升级</string>
    <string name="net_need">网络提醒，首次打开应用需要连接WIFI或者3G网络，请检查您的网络后重试。</string>
    <string name="try_agin">重试</string>
    <string name="version">版本 V %s</string>
    <string name="version_tips">Copyright © 2016 JM 中脉商学院 版权所有</string>
    <string name="about">关于</string>

    <string name="personal">个人中心</string>
    <string name="user_login_title">点击登录</string>
    <string name="user_login_tips">1秒登录中脉商学院个人中心</string>
    <string name="mine_download">我的下载</string>
    <string name="mine_record">播放记录</string>
    <string name="mine_favor">我的收藏</string>
    <string name="feedback">意见反馈</string>
    <string name="send">发送</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="feedback_content_hint">请输入您的反馈信息</string>
    <string name="feedback_phone_hint">请输入您的联系方式</string>
    <string name="loading">正在努力加载中.....</string>
    <string name="logining">正在登录中.....</string>
    <string name="feedbacking">正在努力反馈中.....</string>
    <string name="downloading">正在努力下载高清图.....</string>
    <string name="nodata_str">没有找到相关信息</string>
    <string name="fav_nodata_str">您还未收藏过视频</string>
    <string name="history_nodata_str">您还未播放过视频</string>
    <string name="download_nodata_str">您还未下载过视频</string>

    <string name="video_delete_request">您确定删除该视频？</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="video_sd_mode">标清</string>
    <string name="video_hd_mode">高清</string>
    <string name="video_ud_mode">超清</string>
    <string name="video_context_menu">视频清晰度</string>
    <string name="user">会员中心</string>
    <string name="news_top">中脉头条</string>

    <!-- 友盟统计 -->
    <string name="mob_click_listen">收听次数</string>
    <string name="mob_click_download">下载次数</string>
    <string name="mob_click_fav">收藏次数</string>
    <string name="mob_click_play">播放次数</string>
    <string name="mob_login">登录次数</string>
    <string name="mob_click_share">分享次数</string>
    <string name="share">分享</string>
    <string name="download">下载</string>
    <string name="video_play_fail">该视频播放失败</string>
    <string name="net_fail">您的网络状况不理想，请检查网络连接后再尝试下载。</string>
    <string name="net_2_3g">您正在使用2G/3G网络，视频下载将可能产生较大流量费用(由运营商收取)，是否继续？</string>


    <string name="httpError">网络连接错误</string>
    <string name="app_icon_tip">app_icon</string>
    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>


    <string name="feedback_success">发送成功</string>
    <string name="feedback_fail">发送失败</string>
    <string name="more">更多</string>
    <string name="menu_video">视频</string>
    <string name="menu_video_en">VIDEO</string>
    <string name="topic">专题</string>
    <string name="vip">VIP</string>
    <string name="menu_gallery">图片</string>
    <string name="menu_gallery_en">PICTURE</string>
    <string name="data_load_empty">暂无相关内容</string>
    <string name="data_load_try_again">网络连接失败,点击重试</string>
    <string name="exit_warn">再按一次退出程序</string>

    <string name="gallery_detail">图片详情</string>
    <string name="gallery_success">成功保存至%s</string>
    <string name="gallery_fail">保存失败</string>
    <string name="gallery_permission_fail">保存失败，请授权存储空间权限</string>

    <string name="search_title">资源搜索</string>
    <string name="search_video">搜索视频</string>
    <string name="search_gallery">搜索图集</string>
    <string name="search_video_result">搜索视频结果</string>
    <string name="search_gallery_result">搜索图集结果</string>
    <string name="search_no_result">没有找到相关信息</string>
    <string name="search_hint">请输入关键字</string>
    <string name="search_keyword">大家都在搜</string>
    <string name="search">搜索</string>

    <string name="share_url" formatted="false">我正在使用中脉商学院APP播放视频—%s,APP下载地址:http://a.app.qq.com/o/simple.jsp?pkgname=com.jmtop.edu</string>
    <string name="share_url_picture" formatted="false">我正在使用中脉商学院APP查看图片—\"%s\",APP下载地址:http://a.app.qq.com/o/simple.jsp?pkgname=com.jmtop.edu</string>
    <string name="download_fail">视频下载失败，请稍后再试</string>

    <string name="tools_record_history">播放记录</string>
    <string name="tools_fav">收藏</string>
    <string name="tools_download">下载</string>
    <string name="tools_search">搜索</string>
    <string name="tools_personal">我的</string>

    <string name="video_download_prepare">视频:%s 准备下载中</string>
    <string name="video_downloading">视频:%s 正在下载中</string>
    <string name="video_download_finish">视频:%s 已下载</string>
    <string name="video_download_completed">视频:%s 下载完成</string>
    <string name="video_download_fail">视频:%s 下载失败，请稍后再试</string>

    <string name="video_download_status_pending">等待中</string>
    <string name="video_download_status_paused">暂停中</string>
    <string name="video_download_status_running"></string>

    <string name="user_login_num">请输入学员号</string>
    <string name="user_login_password">请输入密码</string>
    <string name="user_login">登录</string>
    <string name="login_no_account">还没有账号？</string>
    <string name="logout">退出登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_tips">该视频仅中脉商学院学院可观看，是否现在登录？</string>
</resources>
