<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/notification_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark">
    </View>

    <RelativeLayout
        android:id="@+id/action_bar_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/notification_space"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/title"/>

        <LinearLayout
            android:id="@+id/tab_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tab_video"
                android:layout_width="74dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_left_selector"
                android:gravity="center"
                android:text="@string/menu_video"
                android:textColor="@color/tab_text_color_selector"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tab_gallery"
                android:layout_width="74dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_right_selector"
                android:gravity="center"
                android:text="@string/menu_gallery"
                android:textColor="@color/tab_text_color_selector"
                android:textSize="15sp"/>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar_box"
        android:layout_below="@+id/action_bar_box"/>

    <LinearLayout
        android:id="@+id/bottom_bar_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/history_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/action_bar_height"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_history_selector"
                android:gravity="bottom|center_horizontal"
                android:text="@string/tools_record_history"
                android:textColor="@color/tools_text_color_selector"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fav_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/action_bar_height"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_fav_selector"
                android:gravity="bottom|center_horizontal"
                android:text="@string/tools_fav"
                android:textColor="@color/tools_text_color_selector"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/download_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/action_bar_height"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_download_selector"
                android:gravity="bottom|center_horizontal"
                android:text="@string/tools_download"
                android:textColor="@color/tools_text_color_selector"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/action_bar_height"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_search_selector"
                android:gravity="bottom|center_horizontal"
                android:text="@string/tools_search"
                android:textColor="@color/tools_text_color_selector"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/action_bar_height"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_personal_selector"
                android:gravity="bottom|center_horizontal"
                android:text="@string/tools_personal"
                android:textColor="@color/tools_text_color_selector"
                android:textSize="15sp"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>