<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@color/menu_bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_marginRight="@dimen/menu_margin"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <View
                android:id="@+id/notification_space"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/menu_video"
                    android:textColor="@color/black_80_alpha"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/menu_video_en"
                    android:textColor="@color/black_80_alpha"
                    android:textSize="16sp"/>
            </LinearLayout>

            <GridView
                android:id="@+id/video_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/menu_block_bg"
                android:horizontalSpacing="@dimen/menu_spacing"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="@dimen/menu_spacing"/>

            <LinearLayout
                android:id="@+id/gallery_title_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/menu_gallery"
                    android:textColor="@color/black_80_alpha"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/menu_gallery_en"
                    android:textColor="@color/black_80_alpha"
                    android:textSize="16sp"/>
            </LinearLayout>

            <GridView
                android:id="@+id/gallery_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/menu_block_bg"
                android:horizontalSpacing="@dimen/menu_spacing"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="@dimen/menu_spacing"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>