<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include layout="@layout/activity_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_header_height"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <RelativeLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/photo_bg">

                <ImageView
                    android:layout_width="67dp"
                    android:layout_height="67dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/default_photo"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/personal_tips1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_login_title"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/personal_tips2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_login_tips"
                    android:textColor="@color/white_50_alpha"
                    android:textSize="14sp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:src="@drawable/white_arrow"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/black_30_alpha"/>

                    <LinearLayout
                        android:id="@+id/mine_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/personal_item_bg"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_download_active"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:drawableRight="@drawable/arrow_02"
                            android:text="@string/mine_download"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginLeft="15dp"
                        android:background="@color/black_30_alpha"/>

                    <LinearLayout
                        android:id="@+id/mine_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/personal_item_bg"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_history_active"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:drawableRight="@drawable/arrow_02"
                            android:text="@string/mine_record"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginLeft="15dp"
                        android:background="@color/black_30_alpha"/>

                    <LinearLayout
                        android:id="@+id/mine_favor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/personal_item_bg"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_fav_active"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:drawableRight="@drawable/arrow_02"
                            android:text="@string/mine_favor"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/black_30_alpha"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/black_30_alpha"/>

                    <LinearLayout
                        android:id="@+id/mine_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/personal_item_bg"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_feedback"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:drawableRight="@drawable/arrow_02"
                            android:text="@string/feedback"
                            android:textSize="16sp"/>

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginLeft="15dp"
                        android:background="@color/black_50_alpha"/>

                    <LinearLayout
                        android:id="@+id/mine_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/personal_item_bg"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_about"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="0.15dp"
                            android:drawableRight="@drawable/arrow_02"
                            android:text="@string/about"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/black_30_alpha"/>


                </LinearLayout>

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_search_selector"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>